Fix submenu remains clickable while hovering
After clicking on a submenu, it remains clickable as long as you are hovering over it´s
position. This is because the hovering rule still applies (= sets visibility to visible), but
the opacity declaration cannot apply (= opacity stays 0 -> invisible) because you cannot
overide the opacity of a parent. So the solution is to prevent the hovering rule from beeing
applied while the whole contextmenu is hidden.

--- a/src/sass/partials/_grids.scss
+++ b/src/sass/partials/_grids.scss
@@ -47,12 +47,6 @@
       transition: visibility 0s linear 300ms, opacity 300ms;
     }
 
-    &:hover .#{$container} {
-      opacity: 1;
-      visibility: visible;
-      transition-delay: 0s;
-    }
-
     &::after {
       position: absolute;
       top: 7px;
@@ -70,6 +64,15 @@
       border-color: #eee;
     }
   }
+
+  li.#{$submenu}:not(#{$hidden}) {
+    &:hover .#{$container} {
+      opacity: 1;
+      visibility: visible;
+      transition-delay: 0s;
+    }
+  }
+
   li.#{$separator} {
     padding: 0;
 
